--- a/doc/bibliografia.bib
+++ b/doc/bibliografia.bib
@@ -2,11 +2,10 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Daniel Lanza García at 2015-03-21 22:22:14 +0100 
+%% Created for Daniel Lanza García at 2015-03-24 09:41:50 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
-
 
 
 @webpage{opencv,
@@ -14,7 +13,8 @@
 	Date-Modified = {2015-03-21 21:22:02 +0000},
 	Read = {0},
 	Title = {{P\'agina de la libreria de procesamiento de im\'agenes OpenCV}},
-	Url = {http://opencv.org/}}
+	Url = {http://opencv.org/},
+	Bdsk-Url-1 = {http://opencv.org/}}
 
 @article{paper-facerecognition,
 	Author = {Cesar Benavides-Alvarez y Juan Villegas-Cortez y Graciela Rom{\'a}n-Alonso y Carlos Avil{\'e}s-Cruz},
@@ -74,3 +74,9 @@
 	Title = {{Procedimientos para la instalaci{\'o}n de Git}},
 	Url = {http://symfony.es/documentacion/guia-de-instalacion-de-git/},
 	Bdsk-Url-1 = {http://symfony.es/documentacion/guia-de-instalacion-de-git/}}
+	
+@webpage{cloudera-mapreduce,
+	Date-Added = {2015-03-24 08:41:08 +0000},
+	Date-Modified = {2015-03-24 08:41:40 +0000},
+	Title = {{La verdad sobre el rendimiento de MapReduce en discos SSD}},
+	Url = {http://blog.cloudera.com/blog/2014/03/the-truth-about-mapreduce-performance-on-ssds/}}
