--- a/doc/desarrollo-resultados-millones-individuos.tex
+++ b/doc/desarrollo-resultados-millones-individuos.tex
@@ -1,6 +1,6 @@
 \label{resultados-parity}
 
-Para los problemas donde el coste de la evaluación es despreciable, la paralelizaci\'on de esta fase cobra sentido cuando la cantidad de individuos a evaluar es importante. ECJ posee un evaluador que permite paralelizar la evaluación de los individuos de manera que se use los diferentes núcleos de procesamiento que posea la maquina en la que se ejecute, de manera que compararemos los resultados obtenidos con la ejecución secuencial y la multihilo. En la tabla que se muestra a continuación, mostramos tiempos en segundos del tiempo que toma la evaluación en diferentes ejecuciones con diferente n\'umero de individuos y utilizando ejecuciones multihilo, estos tiempos corresponden a ejecuciones del problema Parity y la m\'maquina donde se ejecut\'o disponía de 8 núcleos de procesamiento.
+Para los problemas donde el coste de la evaluación es despreciable, la paralelizaci\'on de esta fase cobra sentido cuando la cantidad de individuos a evaluar es importante. ECJ posee un evaluador que permite paralelizar la evaluación de los individuos de manera que se use los diferentes núcleos de procesamiento que posea la m\'aquina en la que se ejecute, de manera que podemos comparar los tiempos obtenidos con una ejecución secuencial y la multihilo. En la tabla que se muestra a continuación, mostramos tiempos en segundos del tiempo que toma la etapa de evaluación en diferentes ejecuciones con diferente n\'umero de individuos y utilizando ejecuciones multihilo, estos tiempos corresponden a ejecuciones del problema Parity y la m\'aquina donde se ejecut\'o disponía de 8 núcleos de procesamiento.
 
 \begin{table}[H]
   \begin{center}
