--- a/doc/main.tex
+++ b/doc/main.tex
@@ -57,15 +57,29 @@
 		\input{desarrollo-ecj.tex}
 	\section{Estudio de Hadoop como herramienta de procesamiento masivo de informaci\'on\label{desarrollo-hadoop}}
 		\input{desarrollo-hadoop.tex}
+	\section{Diagramas de dise\~no}
+		\input{desarrollo-diagramas.tex}
 	\section{Implementaci\'on}
 		\input{desarrollo-implementacion.tex}
+	\section{Mejoras introducidas}
+		\input{desarrollo-problema-mejoras.tex}
 	\section{Despliegue de problemas utilizando la implementaci\'on}
+		\input{desarrollo-problemas-introduccion.tex}
 		\subsection{MaxOne}
 			\input{desarrollo-problema-maxone.tex}
 		\subsection{Parity}
 			\input{desarrollo-problema-parity.tex}
-	\section{Algo m\'as complejo: reconocimiento facial}
-		\input{desarrollo-problema-facerecognition.tex}
+	\section{Resultados}
+		\input{desarrollo-resultados-introduccion.tex}	
+		\subsection{Millones de individuos: Parity}
+			\input{desarrollo-resultados-millones-individuos.tex}	
+			
+\chapter{En el mundo real: reconocimiento facial}		
+	\input{problema-facerecognition-introduccion.tex}
+	\section{Modificación planteada: introducir evolución y paralelismo}
+		\input{problema-facerecognition-modificacion.tex}
+	\section{Resultados}
+		\input{problema-facerecognition-resultados.tex}
 
 \chapter{Manual de usuario}
 	\section{Obtenci\'on}
@@ -74,13 +88,6 @@
 		\input{manual-importar-a-ide.tex}
 	\section{Compilaci\'on}
 		\input{manual-compilacion.tex}
-
-\chapter{Resultados}
-	\input{resultados-introduccion.tex}
-	\section{Millones de individuos: Parity}
-		\input{resultados-parity.tex}
-	\section{Evaluacion costosa: reconocimiento facial}
-		\input{resultados-facerecognition.tex}	
 
 \chapter{Trabajos futuros}
 
