--- a/doc/bibliografia.bib
+++ b/doc/bibliografia.bib
@@ -2,11 +2,153 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Daniel Lanza García at 2015-03-24 09:41:50 +0100 
+%% Created for Daniel Lanza García at 2015-03-24 14:53:51 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
+@inproceedings{feki2009parallel,
+  title={Parallel Genetic Algorithm Implementation for BOINC.},
+  author={Feki, Malek Smaoui and Nguyen, Viet Huy and Garbey, Marc},
+  booktitle={PARCO},
+  volume={19},
+  pages={212--219},
+  year={2009}
+}
+
+@inproceedings{DBLP:conf/pvm/FernandezTVB00,
+  author    = {Francisco Fern{\'{a}}ndez de Vega and
+               Marco Tomassini and
+               Leonardo Vanneschi and
+               Laurent Bucher},
+  title     = {A Distributed Computing Environment for Genetic Programming Using
+               {MPI}},
+  booktitle = {Recent Advances in Parallel Virtual Machine and Message Passing Interface,
+               7th European {PVM/MPI} Users' Group Meeting, Balatonf{\"{u}}red,
+               Hungary, September 2000, Proceedings},
+  pages     = {322--329},
+  year      = {2000},
+  crossref  = {DBLP:conf/pvm/2000},
+  url       = {http://dx.doi.org/10.1007/3-540-45255-9_44},
+  doi       = {10.1007/3-540-45255-9_44},
+  timestamp = {Tue, 21 Jun 2011 16:42:11 +0200},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/conf/pvm/FernandezTVB00},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
+@inproceedings{DBLP:conf/pvm/FernandezSTG99,
+  author    = {Francisco Fern{\'{a}}ndez de Vega and
+               Juan Manuel S{\'{a}}nchez{-}P{\'{e}}rez and
+               Marco Tomassini and
+               Juan Antonio G{\'{o}}mez Pulido},
+  title     = {A Parallel Genetic Programming Tool Based on {PVM}},
+  booktitle = {Recent Advances in Parallel Virtual Machine and Message Passing Interface,
+               6th European {PVM/MPI} Users' Group Meeting, Barcelona, Spain, September
+               26-29, 1999, Proceedings},
+  pages     = {241--248},
+  year      = {1999},
+  crossref  = {DBLP:conf/pvm/1999},
+  url       = {http://dx.doi.org/10.1007/3-540-48158-3_30},
+  doi       = {10.1007/3-540-48158-3_30},
+  timestamp = {Mon, 20 Jun 2011 17:30:40 +0200},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/conf/pvm/FernandezSTG99},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
+@proceedings{DBLP:conf/pvm/1999,
+  editor    = {Jack Dongarra and
+               Emilio Luque and
+               Tom{\`{a}}s Margalef},
+  title     = {Recent Advances in Parallel Virtual Machine and Message Passing Interface,
+               6th European {PVM/MPI} Users' Group Meeting, Barcelona, Spain, September
+               26-29, 1999, Proceedings},
+  series    = {Lecture Notes in Computer Science},
+  volume    = {1697},
+  publisher = {Springer},
+  year      = {1999},
+  isbn      = {3-540-66549-8},
+  timestamp = {Mon, 22 Apr 2002 10:17:48 +0200},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/conf/pvm/1999},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
+@proceedings{DBLP:conf/pvm/2000,
+  editor    = {Jack Dongarra and
+               P{\'{e}}ter Kacsuk and
+               Norbert Podhorszki},
+  title     = {Recent Advances in Parallel Virtual Machine and Message Passing Interface,
+               7th European {PVM/MPI} Users' Group Meeting, Balatonf{\"{u}}red,
+               Hungary, September 2000, Proceedings},
+  series    = {Lecture Notes in Computer Science},
+  volume    = {1908},
+  publisher = {Springer},
+  year      = {2000},
+  isbn      = {3-540-41010-4},
+  timestamp = {Fri, 10 Oct 2003 09:31:30 +0200},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/conf/pvm/2000},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
+@article{article-parallel-review,
+	Author = {M. Tomassini},
+	Date-Added = {2015-03-24 13:50:43 +0000},
+	Date-Modified = {2015-03-24 13:52:30 +0000},
+	Journal = {Engineering and Computer Science},
+	Title = {Parallel and Distributed Evolutionary Algorithms: A Review},
+	Year = {1999}}
+
+@article{article-paraller-fpga,
+	Author = {P. Martin},
+	Date-Added = {2015-03-24 13:48:28 +0000},
+	Date-Modified = {2015-03-24 13:49:19 +0000},
+	Journal = {Genetic Programming and Evolvable Machines, 2, 317-343},
+	Title = {``A Hardware Implementation of a Genetic Programming System Using FPGAs and Handle-C},
+	Year = {2001}}
+
+@article{DBLP:journals/gpem/VegaTV03,
+	Author = {Francisco Fern{\'{a}}ndez de Vega and Marco Tomassini and Leonardo Vanneschi},
+	Bibsource = {dblp computer science bibliography, http://dblp.org},
+	Biburl = {http://dblp.uni-trier.de/rec/bib/journals/gpem/VegaTV03},
+	Doi = {10.1023/A:1021873026259},
+	Journal = {Genetic Programming and Evolvable Machines},
+	Number = {1},
+	Pages = {21--51},
+	Timestamp = {Wed, 25 May 2011 16:32:33 +0200},
+	Title = {An Empirical Study of Multipopulation Genetic Programming},
+	Url = {http://dx.doi.org/10.1023/A:1021873026259},
+	Volume = {4},
+	Year = {2003},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1023/A:1021873026259}}
+
+@incollection{Andre:1996:PGP:270195.270224,
+	Acmid = {270224},
+	Address = {Cambridge, MA, USA},
+	Author = {Andre, David and Koza, John R.},
+	Chapter = {Parallel Genetic Programming: A Scalable Implementation Using the Transputer Network Architecture},
+	Editor = {Angeline, Peter J. and Kinnear,Jr., Kenneth E.},
+	Isbn = {0-262-01158-1},
+	Numpages = {21},
+	Pages = {317--337},
+	Publisher = {MIT Press},
+	Title = {Advances in Genetic Programming},
+	Url = {http://dl.acm.org/citation.cfm?id=270195.270224},
+	Year = {1996},
+	Bdsk-Url-1 = {http://dl.acm.org/citation.cfm?id=270195.270224}}
+
+@article{DBLP:journals/tec/FolinoPS03,
+	Author = {Gianluigi Folino and Clara Pizzuti and Giandomenico Spezzano},
+	Bibsource = {dblp computer science bibliography, http://dblp.org},
+	Biburl = {http://dblp.uni-trier.de/rec/bib/journals/tec/FolinoPS03},
+	Doi = {10.1109/TEVC.2002.806168},
+	Journal = {{IEEE} Trans. Evolutionary Computation},
+	Number = {1},
+	Pages = {37--53},
+	Timestamp = {Mon, 31 Oct 2011 17:05:20 +0100},
+	Title = {A scalable cellular implementation of parallel genetic programming},
+	Url = {http://dx.doi.org/10.1109/TEVC.2002.806168},
+	Volume = {7},
+	Year = {2003},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1109/TEVC.2002.806168}}
 
 @webpage{opencv,
 	Date-Added = {2015-03-21 21:20:33 +0000},
@@ -74,9 +216,10 @@
 	Title = {{Procedimientos para la instalaci{\'o}n de Git}},
 	Url = {http://symfony.es/documentacion/guia-de-instalacion-de-git/},
 	Bdsk-Url-1 = {http://symfony.es/documentacion/guia-de-instalacion-de-git/}}
-	
+
 @webpage{cloudera-mapreduce,
 	Date-Added = {2015-03-24 08:41:08 +0000},
 	Date-Modified = {2015-03-24 08:41:40 +0000},
 	Title = {{La verdad sobre el rendimiento de MapReduce en discos SSD}},
-	Url = {http://blog.cloudera.com/blog/2014/03/the-truth-about-mapreduce-performance-on-ssds/}}
+	Url = {http://blog.cloudera.com/blog/2014/03/the-truth-about-mapreduce-performance-on-ssds/},
+	Bdsk-Url-1 = {http://blog.cloudera.com/blog/2014/03/the-truth-about-mapreduce-performance-on-ssds/}}
