--- a/doc/desarrollo-diagramas.tex
+++ b/doc/desarrollo-diagramas.tex
@@ -7,4 +7,8 @@
 
 \subsection{Diagrama de flujo de datos}
 
-//TODO: incluir imagen
+Con el fin de entender bien los flujos de datos que se producen en la implementaci\'on realizada se han elaborado dos diagramas de flujo que representan los dos enfoques seguidos en la integraci\'on de ECJ y Hadoop. El primero de ellos \ver{fases-evaluacion-un-trabajo} representa la implementación que consiste en un trabajo que eval\'ua toda la población, esta implementación se explica con mayor detalle m\'as adelante \verapartado{desarrollo-implementacion}. El segundo diagrama representa la implementación realizada para el problema de reconocimiento facial, la cual también se describe con detalle m\'as adelante \verapartado{problema-facerecognition-implementacion}.
+
+\figuraSinMarco{0.9}{imagenes/fases-evaluacion-un-trabajo}{Flujo de información cuando se utiliza un trabajo para la evaluación}{fases-evaluacion-un-trabajo}{}
+
+\figuraSinMarco{1.1}{imagenes/fases-evaluacion-trabajo-por-ind}{Flujo de información cuando se utiliza un trabajo para cada individuo}{fases-evaluacion-trabajo-por-ind}{}
