--- a/doc/main.tex
+++ b/doc/main.tex
@@ -51,7 +51,7 @@
 	\section{Procesamiento masivo de informaci\'on}
 		\input{analisis-procesamiento-masivo.tex}
 
-\chapter{Desarrollo del proyecto}
+\chapter{Integrando ECJ con Hadoop}
 	\input{desarrollo-introduccion.tex}
 	\section{Estudio de ECJ como herramienta de c\'omputo evolutivo\label{desarrollo-ecj}}
 		\input{desarrollo-ecj.tex}
@@ -74,7 +74,7 @@
 		\subsection{Millones de individuos: Parity}
 			\input{desarrollo-resultados-millones-individuos.tex}	
 			
-\chapter{En el mundo real: reconocimiento facial}		
+\chapter{Reconocimiento facial mediante algoritmos evolutivos masivamente paralelos}		
 	\input{problema-facerecognition-introduccion.tex}
 	\section{Modificación planteada: introducir evolución y paralelismo}
 		\input{problema-facerecognition-modificacion.tex}
