--- a/doc/problema-facerecognition-introduccion.tex
+++ b/doc/problema-facerecognition-introduccion.tex
@@ -1,3 +1,4 @@
+\label{problema-facerecognition}
 //TODO: cuenta la aplicación de lo anterior a un problema real y costoso
 //TODO: Una vez que tengas un capitulo nuevo para el problema del reconocimiento facial, debes hacer una introduccion mas amplia. Utiliza la informacion de los trabajos de Cesar, y cuenta mejor porque y como se plantea el uso de un algoritmo genetico.
 
