--- a/doc/desarrollo-implementacion.tex
+++ b/doc/desarrollo-implementacion.tex
@@ -33,19 +33,23 @@ La implementación realizada se encarga únicamente de recorrer todos los indivi
 
 \subsection{Aclaraciones previas}
 
-Antes de entrar un detalle de la implementación del método evaluatePopulation, debemos realizar algunas consideraciones. Para realizar la evaluación de los individuos, no es solo necesario las características que definen a cada individuo (genotipo), si no también aspectos como que función de evaluación utilizar o parámetros que determinan la forma de evaluar el individuo, estos y otros aspectos necesarios est\'an contenidos en el objeto que representa el estado de la evaluación (EvaluationState). Es por esto que en cada uno de los procesos que queramos evaluar los individuos, se debe tener acceso a este objeto, para tal propósito haremos uso de dos funciones clave que poseen ECJ y el sistema de ficheros de Hadoop (HDFS).
+Antes de entrar en detalle de la implementación del método evaluatePopulation, debemos realizar algunas consideraciones. Para realizar la evaluación de los individuos, no es solo necesario las características que definen a cada individuo (genotipo), si no también aspectos como que función de evaluación utilizar o parámetros que determinan la forma de evaluar el individuo, estos y otros aspectos necesarios est\'an contenidos en el objeto que representa el estado de la evaluación (EvaluationState). Es por esto que en cada uno de los procesos que queramos evaluar los individuos, se debe tener acceso a este objeto, para tal propósito haremos uso de dos funciones clave que poseen ECJ y el sistema de ficheros de Hadoop (HDFS).
 
-Para que todos los procesos tengan acceso al estado de la evaluación, haremos uso de la característica "puntos de restauración" que posee ECJ, esta característica permite serializar todo el estado del proceso evolutivo y enviarlo a través de la red o guardarlo en algún fichero, en principio esta característica se ideo con el fin de que se pueda detener el proceso y reanudarlo por donde iba cuando se desee pero en esta implementación se utilizar\'a para distribuir el estado del problema entre las diferentes m\'aquinas que llevar\'an a cabo la evaluación.
+Para que todos los procesos tengan acceso al estado de la evaluación, haremos uso de la característica "puntos de restauración" que posee ECJ, esta característica permite serializar todo el estado del proceso evolutivo y enviarlo a través de la red o guardarlo en algún fichero, en principio esta característica se ide\'o con el fin de que se pueda detener el proceso y reanudarlo por donde iba cuando se desee pero en esta implementación se utilizar\'a para distribuir el estado del problema entre las diferentes m\'aquinas que llevar\'an a cabo la evaluación.
 
 Por otro lado, utilizaremos una característica de HDFS denominada cache distribuida, esta característica permite almacenar ficheros de forma que se distribuyan por todos y cada uno de los nodos que conforman el cluster, lo cual es ideal en este caso ya que si almacenamos aquí el estado de la evolución, todos los procesos que se distribuyan podrán acceder a el.
 
-Debemos tener en cuenta que el estado de la evaluación contiene todos los individuos de la población, lo cual no es necesario distribuir ya que cada nodo evaluar\'a una parte de la población. Sabiendo \'esto, se distribuirá el estado de la evaluación sin la población, esta ser\'a proporcionada a través de los ficheros de entrada al problema, los cuales Hadoop se encarg\'a automáticamente de dividir y distribuir.
+Debemos tener en cuenta que el estado de la evaluación contiene todos los individuos de la población, lo cual no es necesario distribuir por dos motivos principales: en primer lugar porque cada nodo evaluar\'a solo una parte de la población con lo que no necesita contener toda la población, y en segundo lugar porque la población ser\'a la entrada del trabajo de Hadoop la cual estará contenida en el sistema de ficheros (HDFS). Sabiendo \'esto, se distribuirá el estado de la evaluación sin la población, esta ser\'a proporcionada a través de los ficheros de entrada al trabajo, los cuales Hadoop se encarg\'a automáticamente de dividir y distribuir.
 
-//TODO: Cuando cuentas cómo se ha hecho la paralelización, el lector se quedará sorprendido porque este modelo (el de facerecognition) no se contó en el capítulo previo. Cuando se hacen evaluación de fitness, a veces, cada individuo require múltiples evaluaciones (aunque no es el caso del MAXONE, si lo es en el caso del EVENP), y que ahí, si fuera necesario, también se puede introducir paralelización. Asi, cuando llegues a este capítulo podrás referirte a lo que ya se dijo antes explicando el modelo paralelo que se propone para los algoritmos evolutivos con MAP/REDUCE. Si no es así, y es de otro modo, explicarlo bien en el capítulo previo, para luego entender aquí cómo se hace todo.
+\subsubsection{Dos modelos para dos situaciones}\label{dos-modelos-para-dos-situaciones}
+
+La implementación que se describirá a continuación aborda el problema ejecutando un trabajo de Hadoop que evalúa la población completa. Este trabajo tiene como entrada la población de individuos, \'esta es dividida y distribuida para su evaluación y finalmente se recaban estos resultados para asignar  las aptitudes (fitness) a los individuos. Este modelo debe ser utilizado para problemas donde se utilizan amplias poblaciones o con individuos cuya evaluación es costosa, aunque si la evaluación es notablemente costosa y la evaluación de un solo individuo puede ser paralizada quizás debamos tener en cuenta el modelo que se explica a continuación.
+
+Existe otro enfoque en el que podemos utilizar un trabajo de Hadoop para evaluar cada uno de los individuos. Este modelo debe ser considerado cuando la evaluación de cada individuo toma varios minutos ya que tan solo la creación de cada trabajo conlleva varios segundos (~5 segundos). La idea que persigue este modelo es lanzar de forma paralela tantos trabajos como individuos haya en la población, procesando cada uno de ellos la aptitud del individuo que ha evaluado, finalmente como en el modelo anterior, se recaban los resultados para asignarselos a los individuos. Este enfoque se ha utilizado para dar solución al problema de reconocimiento facial que se estudia en el capitulo siguiente \verapartado{problema-facerecognition}.
 
 \subsection{Paso 1: Distribución del estado de la evaluación}
 
-Una vez descrito el proceso necesario para la evaluación distribuida de los individuos, pasamos ahora a describir la implementación realizada del método evaluatePopulation, la cual establece varias etapas que describimos a continuación.
+Una vez descrito el proceso necesario para la evaluación distribuida de los individuos, pasamos ahora a describir la implementación realizada del método evaluatePopulation, la cual establece varias etapas que describimos a continuación. Cada una de estas etapas se ven representadas en el diagrama de flujo de datos visto en la sección anterior \ver{fases-evaluacion-un-trabajo}.
 
 Con el objetivo de simplificar el desarrollo se ha implementado un cliente que lleva a cabo todas las tareas relacionadas con Hadoop:
 
