--- a/doc/problema-facerecognition-modificacion.tex
+++ b/doc/problema-facerecognition-modificacion.tex
@@ -4,11 +4,13 @@ La configuracion de este problema en ECJ guarda mucha relación con el problema 
 
 SI tenemos en cuenta el tiempo que se tarda en la ejecución secuencial del algoritmo (3 minutos) y hacemos unas cuentas sencillas podemos ver que si tenemos una peque\~na población de 10 individuos, cada generación tardar\'a en ser evaluada una media hora, si queremos evolucionarlo necesitaremos quizás decenas o centenas de generaciones lo cual conllevar\'ia un tiempo impracticable. Es por esto que adem\'as de la integración con ECJ, haremos uso de la integración con Hadoop para distribuir y paralizar el proceso y así poder hacer que la evaluación de cada generación sea cuestión de pocos minutos. Los resultados obtenidos pueden ser consultados m\'as adelante en este documento \verapartado{resultados-facerecognition}.
 
-\subsection{Implementaci\'on}
+\subsection{Implementaci\'on} \label{problema-facerecognition-implementacion}
 
-En este caso, la implementación no sigue la misma idea de evaluar toda la población con un solo trabajo de Hadoop \verapartado{desarrollo-implementacion}, en este caso el evaluador lanzar\'a un trabajo de Hadoop por cada individuo y cada trabajo dividir\'a la entrada (base de datos de imagenes) en diferentes partes para paralizar el proceso. De manera que la paralelizacion se producirá a dos niveles ya que los trabajos se ejecutaran de manera simultánea y las tareas dentro de cada trabajo también.
+Como se ha comentado en la sección sobre la implementación de los problemas anteriores \verapartado{dos-modelos-para-dos-situaciones}, existe otro modelo que se puede llevar a cabo cuando la evaluación de cada uno de los individuos toma varios minutos y \'esta puede ser paralizada. \'Este es el caso del problema de reconocimiento facial que abordamos en este cap\'titulo en el que la evaluación de cada individuo puede tomar aproximadamente 3 minutos y consiste en aplicar un procesamiento a cada una de las imágenes de la base de datos de entrada, por lo que su paralelizaci\'on no se plantea muy complicada. Teniendo en cuenta esto, haremos uso de este modelo para la integraci\'on de este problema con Hadoop. La paralelizaci\'on se producirá a dos niveles ya que los trabajos se ejecutar\'an de manera simultánea y las tareas dentro de cada trabajo también. Anteriormente \ver{fases-evaluacion-trabajo-por-ind} se ha mostrado el flujo de información que se produce con esta implementación, ese diagrama puede ayudar a entender mejor las etapas que se llevan a cabo.
 
-Para hacer esto, el método encargado de evaluar los individuos en el Evaluator (evaluatePopulation) genera un hilo de ejecución de forma local para cada indioviduo de la poblaci\'on, de manera que cada uno de ellos se encarga de la evaluación de cada individuo, el propósito de estos hilos es tan solo lanzar los trabajos en Hadoop por lo que la mayoría del tiempo tan solo se dedican a esperar que la ejecución de los trabajos finalicen para proseguir con la ejecución normal del proceso evolutivo. La implementación de lo anteriormente explicado se puede observar en el siguiente fragmente de código:
+La entrada del trabajo de Hadoop estar\'a almacenada en el sistema de ficheros y estar\'a conformada por la base de datos de imagenes, esta ser\'a dividida y distribuida a lo targo del cluster para que las diferentes tareas que se ejecuten puedan acceder a ella.
+
+Para hacer esto, el método encargado de evaluar los individuos en el Evaluator (evaluatePopulation) genera un hilo de ejecución de forma local para cada individuo de la poblaci\'on, de manera que cada uno de ellos se encarga de la evaluación de cada individuo, el propósito de estos hilos es tan solo lanzar los trabajos en Hadoop por lo que la mayoría del tiempo tan solo se dedican a esperar que la ejecución de los trabajos finalicen para proseguir con la ejecución normal del proceso evolutivo. La implementación de lo anteriormente explicado se puede observar en el siguiente fragmente de código:
 
 \begin{lstlisting}[language=Java]
 	Individual[] inds = subpops[0].individuals;
